# raylib_game_template

./: .gitignore  CMakeLists.txt  README.md  gen_srcs.py
include/: ExampleHeader.h
include/stateMachine/: StateMachine.h
include/stateMachine/states/: ExampleState.h
include/states/: StateExample.h  state_example.h
smile_engine/include/: smile.h
smile_engine/src/: smile.c
src/: ExampleHeader.c  _main.c
src/stateMachine/: StateMachine.c
src/stateMachine/states/: ExampleState.c
src/states/: StateExample.c  state_example.c
